<resources>
    <string name="app_name">Interactive Running</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="height">Height</string>
    <string name="exercise">Exercise</string>
    <string name="goal_time">Goal time</string>
    <string name="speed">Speed</string>
    <string name="confirm">Confirm</string>
    <string name="start">Start</string>
    <string name="_0">0</string>
    <string name="ground_contact_time">Ground contact time</string>
    <string name="stride_length">Stride length</string>
    <string name="cadence">Cadence</string>
    <string name="stop">Stop</string>
</resources>